--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@capacitor/status-bar": "1.0.2",
     "@ionic-native/core": "^5.36.0",
     "@ionic-native/qr-scanner": "^5.36.0",
+    "@ionic-native/social-sharing": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage-angular": "^3.0.6",
     "angular2-qrscanner": "^1.0.7",
     "animate.css": "^4.1.1",
     "cordova-plugin-qrscanner": "^3.0.1",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
     "jetifier": "^2.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
